--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "NfcSessionAtOBJC",
+  "name": "NfcSession",
   "version": "1.0.0",
-  "description": "ALmex NFC plugin",
+  "description": "Almex NFC plugin",
   "cordova": {
-    "id": "cordova-plugin-nfc-session-atobjc",
+    "id": "nfc-session",
     "platforms": [
       "ios"
     ]
